--- a/.jdtls/jdt.ls-java-project/.project
+++ b/.jdtls/jdt.ls-java-project/.project
@@ -26,6 +26,11 @@
 			<location>C:/Users/sneha/Desktop/My Apps/Coding/java/tree/BinaryTree.java</location>
 		</link>
 		<link>
+			<name>src/CountInversions.java</name>
+			<type>1</type>
+			<location>C:/Users/sneha/Desktop/My Apps/Coding/java/Leetcode/CountInversions.java</location>
+		</link>
+		<link>
 			<name>src/Leetcode/Q493.java</name>
 			<type>1</type>
 			<location>C:/Users/sneha/Desktop/My Apps/Coding/java/Leetcode/Q493.java</location>
